--- a/templates/index.html
+++ b/templates/index.html
@@ -90,7 +90,7 @@
         }
         .row {
             display: flex;
-            gap: 5px;
+            gap: 2px; /* Reduced from 5px to 2px */
             margin-bottom: 5px;
         }
         .tile {
@@ -136,6 +136,9 @@
                 width: 50px;
                 height: 50px;
                 font-size: 22px;
+            }
+            .row {
+                gap: 2px; /* Maintain reduced gap on mobile */
             }
         }
     </style>
